--- a/WindowExplorer/Sources/Controllers/MediaControllers/ImageViewController/Image.storyboard
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/ImageViewController/Image.storyboard
@@ -10,17 +10,28 @@
             <objects>
                 <viewController id="stH-E5-D9l" customClass="ImageViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="sSn-s5-6HM">
-                        <rect key="frame" x="0.0" y="0.0" width="640" height="400"/>
+                        <rect key="frame" x="0.0" y="0.0" width="640" height="408"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="529-pd-R3M">
-                                <rect key="frame" x="0.0" y="360" width="640" height="40"/>
+                                <rect key="frame" x="0.0" y="368" width="640" height="40"/>
+                                <subviews>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="CLy-R4-WR0">
+                                        <rect key="frame" x="0.0" y="0.0" width="640" height="1"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="Of4-Vh-d8P"/>
+                                        </constraints>
+                                    </customView>
+                                </subviews>
                                 <constraints>
+                                    <constraint firstItem="CLy-R4-WR0" firstAttribute="leading" secondItem="529-pd-R3M" secondAttribute="leading" id="5zL-TU-iIC"/>
+                                    <constraint firstAttribute="bottom" secondItem="CLy-R4-WR0" secondAttribute="bottom" id="8Yr-aK-Vqd"/>
                                     <constraint firstAttribute="height" constant="40" id="fwT-XL-vNP"/>
+                                    <constraint firstAttribute="trailing" secondItem="CLy-R4-WR0" secondAttribute="trailing" id="iBy-PR-Kju"/>
                                 </constraints>
                             </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="NkP-e9-NC4">
-                                <rect key="frame" x="0.0" y="360" width="40" height="40"/>
+                                <rect key="frame" x="0.0" y="368" width="40" height="40"/>
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jwW-9F-wrk">
                                         <rect key="frame" x="10" y="10" width="20" height="20"/>
@@ -67,7 +78,7 @@
                                 </scroller>
                             </scrollView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="1Fq-0s-pMM">
-                                <rect key="frame" x="600" y="360" width="40" height="40"/>
+                                <rect key="frame" x="600" y="368" width="40" height="40"/>
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v6p-jH-gar">
                                         <rect key="frame" x="10" y="10" width="20" height="20"/>
@@ -90,7 +101,7 @@
                                 </constraints>
                             </customView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1GK-FO-lwr">
-                                <rect key="frame" x="46" y="360" width="548" height="29"/>
+                                <rect key="frame" x="46" y="368" width="548" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="g5g-AP-8FI"/>
                                 </constraints>
@@ -103,7 +114,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="529-pd-R3M" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" id="6Jt-qE-li2"/>
-                            <constraint firstItem="WTp-wA-9SL" firstAttribute="top" secondItem="NkP-e9-NC4" secondAttribute="bottom" id="BmA-2z-XNq"/>
+                            <constraint firstItem="WTp-wA-9SL" firstAttribute="top" secondItem="NkP-e9-NC4" secondAttribute="bottom" constant="8" id="BmA-2z-XNq"/>
                             <constraint firstItem="NkP-e9-NC4" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" id="E2X-0d-8js"/>
                             <constraint firstItem="1GK-FO-lwr" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="11" id="Uab-UM-qDh"/>
                             <constraint firstAttribute="trailing" secondItem="WTp-wA-9SL" secondAttribute="trailing" constant="8" id="Uvu-Og-omp"/>
@@ -126,6 +137,7 @@
                         <outlet property="scrollViewWidthConstraint" destination="etP-mP-7KU" id="aKz-kx-Oe4"/>
                         <outlet property="titleLabel" destination="1GK-FO-lwr" id="HfV-8T-rGp"/>
                         <outlet property="windowDragArea" destination="529-pd-R3M" id="oDk-Ab-kF4"/>
+                        <outlet property="windowDragAreaHighlight" destination="CLy-R4-WR0" id="9FG-xu-xiY"/>
                     </connections>
                 </viewController>
                 <customObject id="ApF-HA-SvK" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
